--- a/build-system.cabal
+++ b/build-system.cabal
@@ -52,12 +52,18 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall
+  ghc-options:
+    -Wall -Wno-unticked-promoted-constructors -Wcompat
+    -Wincomplete-record-updates -Wincomplete-uni-patterns
+    -Wredundant-constraints -Wmissing-deriving-strategies
 
 library
+  import: warnings
+
   build-depends: base
     , command
     , free
+    , mtl
     , text
 
   default-langauge: GHC2021
